# game-engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.h
ECS/: ComponentManager.cpp  ComponentManager.h  Constants.h  EntityManager.cpp  EntityManager.h  SystemManager.cpp  SystemManager.h
ECS/Components/: Player.h  Transform.h
ECS/Systems/: PlayerMovement.h  System.h
Utils/: VectorUtils.cpp  VectorUtils.h
